--- a/docs/_sass/_dark.scss
+++ b/docs/_sass/_dark.scss
@@ -5,28 +5,29 @@
 :root {
   --base-color: #bfbdb7;
   --border: dashed 1px rgba(219, 219, 219, 0.9);
-  --selection-background: rgba(219, 219, 219, 0.99);
-  --selection-text: #5f7e9779;
+  --selection-background: #5f7e9779;
+  --selection-text: unset;
   --background-color: #011627;
+  --highlight-background-color: #1a2d3c;
   --text-color: var(--base-color);
   --placeholder-color: var(--base-color);
   --link-color: var(--base-color);
-  --code-color-1: #aaaaaa;
-  --code-color-2: #ffffcc;
-  --code-color-3: #F00000;
-  --code-color-4: #F0A0A0;
-  --code-color-5: #b38aff;
-  --code-color-6: #5ba711;
-  --code-color-7: #e4e477;
-  --code-color-8: #000080;
-  --code-color-9: #05ca05;
-  --code-color-10: #888888;
-  --code-color-11: #555555;
-  --code-color-12: #800080;
-  --code-color-13: #00d4d4;
-  --code-color-14: #00c1c1;
-  --code-color-15: #ed9d13;
-  --code-color-16: #1e90ff;
-  --code-color-17: #800000;
-  --code-color-18: #bbbbbb;
+  --code-color-1: #637777; /* Comment */
+  --code-color-2: #637777; /* Comment */
+  --code-color-3: #F00000; /* Error */
+  --code-color-4: #F0A0A0; /* Error Background */
+  --code-color-5: #b38aff; /* Keyword & Comment Special */
+  --code-color-6: #5ba711; /* Generic Preproc */
+  --code-color-7: #e4e477; /* Generic Error & Deleted */
+  --code-color-8: #000080; /* Generic Heading */
+  --code-color-9: #05ca05; /* Generic Inserted */
+  --code-color-10: #888888; /* Output */
+  --code-color-11: #555555; /* Prompt */
+  --code-color-12: #800080; /* Subheading */
+  --code-color-13: #00d4d4; /* Name Namespace */
+  --code-color-14: #00c1c1; /* Literal Number */
+  --code-color-15: #ed9d13; /* Literal String */
+  --code-color-16: #1e90ff; /* Name Tag */
+  --code-color-17: #800000; /* Name Entity */
+  --code-color-18: #bbbbbb; /* text Whitespace */
 }
