--- a/docs/_sass/base.scss
+++ b/docs/_sass/base.scss
@@ -169,3 +169,8 @@ pre { margin: 10px 0; padding: 10px; border-radius: 5px;  }
     content: unset;
     margin-right: unset;
 }
+
+img .profile_picture {
+    margin: 0 1em;
+    border-radius: 50%;
+}
